fixed api wrong location

--- a/nginx.conf
+++ b/nginx.conf
@@ -31,8 +31,8 @@ http {
         }
 
         # API proxy configuration
-        location /api {
-              proxy_pass http://springboot-app:5050;
+        location /api/ {
+              proxy_pass http://springboot-app:5050/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
