--- a/nginx.conf
+++ b/nginx.conf
@@ -31,21 +31,33 @@ http {
         }
 
         # API proxy configuration
+        # Auth endpoints - keep /api prefix as Spring Boot expects /api/auth
+        location /api/auth/ {
+            proxy_pass http://springboot-app:5050/api/auth/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cookie_path / "/";
+            proxy_cookie_domain localhost $host;
+        }
+        
+        # Book endpoints - strip /api prefix as Spring Boot expects /book
         location /api/ {
-              proxy_pass http://springboot-app:5050/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_cookie_path / "/";
-    proxy_cookie_domain localhost $host;
+            proxy_pass http://springboot-app:5050/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cookie_path / "/";
+            proxy_cookie_domain localhost $host;
 
-    # Remove CORS headers to avoid conflicts with Spring Boot's CORS configuration
-    # add_header 'Access-Control-Allow-Origin' '*' always;
-    # add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-    # add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
+            # Remove CORS headers to avoid conflicts with Spring Boot's CORS configuration
+            # add_header 'Access-Control-Allow-Origin' '*' always;
+            # add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            # add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
 
-    if ($request_method = OPTIONS) {
+            if ($request_method = OPTIONS) {
         add_header 'Access-Control-Max-Age' 1728000;
         add_header 'Content-Type' 'text/plain; charset=utf-8';
         add_header 'Content-Length' 0;
