still proxy shit

--- a/nginx.conf
+++ b/nginx.conf
@@ -43,8 +43,8 @@ http {
         }
         
         # Book endpoints - strip /api prefix as Spring Boot expects /book
-        location /api/ {
-            proxy_pass http://springboot-app:5050/;
+        location /api/book {
+            proxy_pass http://springboot-app:5050/book;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
