--- a/nginx.conf
+++ b/nginx.conf
@@ -31,8 +31,8 @@ http {
         }
 
         # API proxy configuration
-        # Auth endpoints - keep /api prefix as Spring Boot expects /api/auth
-        location /api/auth/ {
+        # Auth endpoints - route /auth/ to /api/auth/ on backend
+        location /auth/ {
             proxy_pass http://springboot-app:5050/api/auth/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -43,8 +43,8 @@ http {
         }
         
         # Book endpoints - strip /api prefix as Spring Boot expects /book
-        location /api/book {
-            proxy_pass http://springboot-app:5050/book;
+        location /api/book/ {
+            proxy_pass http://springboot-app:5050/book/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
