--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,8 @@ http {
 
     server {
         listen 8080;
-        server_name localhost;
+        listen 80;
+        server_name localhost library.trimpeneers.be;
 
         root /usr/share/nginx/html;
         index index.html;
@@ -39,7 +40,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cookie_path / "/";
-            proxy_cookie_domain localhost $host;
+            proxy_cookie_domain ~ "\.?(.+)$" $1;
         }
         
         # Book endpoints - strip /api prefix as Spring Boot expects /book
@@ -50,7 +51,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cookie_path / "/";
-            proxy_cookie_domain localhost $host;
+            proxy_cookie_domain ~ "\.?(.+)$" $1;
 
             # Remove CORS headers to avoid conflicts with Spring Boot's CORS configuration
             # add_header 'Access-Control-Allow-Origin' '*' always;
@@ -72,5 +73,18 @@ http {
         location = /50x.html {
             root /usr/share/nginx/html;
         }
+    }
+
+    # HTTPS server block for production domain
+    server {
+        listen 443 ssl;
+        server_name library.trimpeneers.be;
+
+        # SSL configuration (you'll need to provide SSL certificates)
+        # ssl_certificate /etc/nginx/ssl/cert.pem;
+        # ssl_certificate_key /etc/nginx/ssl/key.pem;
+        
+        # For now, redirect HTTPS to HTTP (temporary solution)
+        return 301 http://$server_name$request_uri;
     }
 }
