--- a/compose.yaml
+++ b/compose.yaml
@@ -24,7 +24,8 @@ services:
   nginx:
     image: nginx:latest
     ports:
-      - "8080:8080"
+      - "80:8080"    # Map standard HTTP port 80 to nginx port 8080
+      - "8080:8080"  # Keep 8080 for direct access during development
     volumes:
       - ./Frontend:/usr/share/nginx/html
       - ./nginx.conf:/etc/nginx/nginx.conf
