--- a/nginx.conf
+++ b/nginx.conf
@@ -40,7 +40,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cookie_path / "/";
-            proxy_cookie_domain ~ "\.?(.+)$" $1;
+            proxy_cookie_domain $host $host;
         }
         
         # Book endpoints - strip /api prefix as Spring Boot expects /book
@@ -51,7 +51,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cookie_path / "/";
-            proxy_cookie_domain ~ "\.?(.+)$" $1;
+            proxy_cookie_domain $host $host;
 
             # Remove CORS headers to avoid conflicts with Spring Boot's CORS configuration
             # add_header 'Access-Control-Allow-Origin' '*' always;
