--- a/nginx.conf
+++ b/nginx.conf
@@ -42,6 +42,17 @@ http {
             proxy_cookie_path / "/";
             proxy_cookie_domain $host $host;
         }
+
+        # Compatibility route for /api/auth/ calls (frontend still uses old config)
+        location /api/auth/ {
+            proxy_pass http://springboot-app:5050/api/auth/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cookie_path / "/";
+            proxy_cookie_domain $host $host;
+        }
         
         # Book endpoints - strip /api prefix as Spring Boot expects /book
         location /api/book/ {
