--- a/nginx.conf
+++ b/nginx.conf
@@ -77,6 +77,24 @@ http {
     }
         }
 
+        # Direct book endpoints for frontend calls
+        location /book/ {
+            proxy_pass http://springboot-app:5050/book/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cookie_path / "/";
+            proxy_cookie_domain $host $host;
+
+            if ($request_method = OPTIONS) {
+        add_header 'Access-Control-Max-Age' 1728000;
+        add_header 'Content-Type' 'text/plain; charset=utf-8';
+        add_header 'Content-Length' 0;
+        return 204;
+    }
+        }
+
         # Error handling
         error_page 404 /index.html;
         error_page 500 502 503 504 /50x.html;
